wxwindows2.2 (2.2.2) unstable; urgency=low

  * added missing dependancy for contrib-dev package.  Closes: #70880

 -- Ron Lee <ron@microtronics.com.au>  Tue,  5 Sep 2000 18:51:24 +0930

wxwindows2.2 (2.2.1) unstable; urgency=low

  * wxWin 2.2.1 stable release.
  * First upload to deb.org after repackaging to build directly from
    upstream cvs.
  * still not quite lintian clean yet:
    - wxPython lib can't be built with a proper soname yet.
    - the -dbg packages need an override for the shlib symlink.
    - and a couple of packages have the lib symlink 'before the
      lib', but that's ugly to fix right now, they aren't critical
      libs, and allegedly this will be handled by dpkg sometime soon.
  * moved full licence text into copyright file.

 -- Ron Lee <ron@debian.org>  Sun, 13 Feb 2000 18:40:00 +1030

Local variables:
mode: debian-changelog
End: