@@ -1,0 +1,2 @@
+usr/lib/=PY/site-packages/wxPython
+
