@@ -1,1 +1,2 @@
-usr/lib/python1.5/site-packages/wxPython/lib/sizers
+usr/lib/=PY/site-packages/wxPython/lib/sizers
+
